crates/franken-engine/tests/snapshots/cli_golden__decision_demo_help.snap
---
source: tests/cli_golden.rs
expression: actual
---
{
  "exit_code": 0,
  "stdout": "franken-decision-demo usage:\n\n  franken-decision-demo [--help]\n\nRuns the deterministic guardplane decision demo and prints a signed JSON receipt.\n",
  "stderr": "",
  "command": "franken-decision-demo --help"
}
