crates/franken-engine/tests/snapshots/cli_golden__frankenctl_help.snap
---
source: tests/cli_golden.rs
expression: actual
---
{
  "exit_code": 0,
  "stdout": "frankenctl usage:\n\nPRODUCTION-READY SURFACES:\n  frankenctl version\n  frankenctl compile --input <source.js> --out <artifact.json> [--goal script|module]\n      [--trace-id <id>] [--decision-id <id>] [--policy-id <id>]\n  frankenctl run --input <source.js> --extension-id <id> [--goal script|module] [--out <report.json>]\n  frankenctl doctor (--input <runtime_input.json> | --artifact-dir <artifacts/<gate>/<ts>>)\n      [--summary] [--out-dir <path>]\n      [--workload-id <id>] [--package-name <name>] [--target-platform <value>]...\n      [--signals <signals.json>] [--advisories <signals_or_bundle.json>]\n      [--scenario-report <compatibility_scenario_report.json>] [--platform-signals <signals.json>]\n      [--extension-id <id>] [--trace-id <id>] [--start-ns <u64>] [--end-ns <u64>]\n      [--severity info|warning|critical] [--decision-type <snake_case_decision_type>]\n      [--redact-key <key_fragment>]...\n  frankenctl verify compile-artifact --input <artifact.json> [--output <report.json>]\n  frankenctl verify receipt --input <verifier_input.json> --receipt-id <id> [--summary] [--output <report.json>]\n  frankenctl benchmark run [--seed <u64>] [--run-id <id>] [--run-date <YYYY-MM-DD>]\n      [--profile small|medium|large]... [--family <name>]... [--out-dir <path>]\n  frankenctl benchmark score --input <publication_gate_input.json>\n      [--trace-id <id>] [--decision-id <id>] [--policy-id <id>] [--output <path>]\n  frankenctl benchmark verify --bundle <dir> [--summary] [--output <report.json>]\n  frankenctl replay run --trace <trace.json> [--compare-trace <trace.json>]\n      [--mode strict|best-effort|validate] [--out <report.json>]\n  frankenctl react compile|build|doctor|contract [options]  # React integration surfaces\n\nOPERATOR/DEVELOPMENT SURFACES (unsupported in production):\n  frankenctl gates <gate-type> [options]  # validation gates - use for dev/CI only\n  frankenctl reports <report-type> [options]  # analysis reports - use for dev/CI only\n  frankenctl test <test-type> [options]  # testing tools - use for dev/CI only\n  frankenctl synth <synth-type> [options]  # synthesis tools - experimental\n  frankenctl orchestrate <orchestrate-type> [options]  # orchestration tools - experimental\n  frankenctl runtime <runtime-type> [options]  # runtime diagnostics - experimental\n\nIMPORTANT: Operator/development surfaces may change without notice.\nProduction use should rely only on the documented production-ready surfaces.\nSubmit issues with reproduction bundles following docs/templates/ for support.\n\nbenchmark families:\n  boot-storm\n  capability-churn\n  mixed-cpu-io-agent-mesh\n  reload-revoke-churn\n  adversarial-noise-under-load\n",
  "stderr": "",
  "command": "frankenctl --help"
}
