crates/franken-engine/tests/snapshots/cli_golden__frankenctl_version.snap
---
source: tests/cli_golden.rs
expression: actual
---
{
  "exit_code": 0,
  "stdout": "frankenctl 0.3.0\n",
  "stderr": "",
  "command": "frankenctl version"
}
